--- a/Lesson_5.Rmd
+++ b/Lesson_5.Rmd
@@ -1166,6 +1166,7 @@ In this case, we want to match the unique identifier, found for each person in t
 
 So what does this look like in practice? 
 
+lalalala
 
 Well let's open up our wave 1 (well technically you have them all open, so just bring wave 1 to the front). Now we don't want to overwrite this file, so save it as something new. Do this by selecting File > Save As... and choosing where to save it, and giving it a name. Here I will save it in the same folder where I've saved the individual waves data, and call it "next_stepsw1-3.xlsx" as it will contain waves one through three of the next steps longitudinal survey:
 
