--- a/book/bookdown-demo-master/bookdown-demo-master/docs/bookdown-demo.tex
+++ b/book/bookdown-demo-master/bookdown-demo-master/docs/bookdown-demo.tex
@@ -84,7 +84,7 @@
   \postauthor{\par}
   \predate{\centering\large\emph}
   \postdate{\par}
-  \date{2018-09-23}
+  \date{2018-10-08}
 
 \usepackage{booktabs}
 \usepackage{amsthm}
@@ -4751,7 +4751,7 @@ population parameters. A statistic and a parameter are very similar.
 They are both descriptions of groups, like ``50\% of dog owners prefer X
 Brand dog food.'' The difference between a statistic and a parameter is
 that statistics describe a sample. A parameter describes an entire
-population.
+population. (You might recall this from week 1 readings.)
 
 For example, say you want to know the mean income of the subscribers to
 a particular magazine---a parameter of a population. You draw a random
@@ -4823,6 +4823,10 @@ population from which the scores were sampled. Therefore, if a
 population has a mean μ, then the mean of the sampling distribution of
 the mean is also μ. The symbol μM is used to refer to the mean of the
 sampling distribution of the mean.
+
+\hypertarget{activity-1-sample-statistisc-vs-population-parameters}{%
+\subsection{Activity 1: Sample statistisc vs population
+parameters}\label{activity-1-sample-statistisc-vs-population-parameters}}
 
 Let's explore this with some data. Download the heightsAndNames.xlsx
 file from Blackboard.
@@ -4932,6 +4936,9 @@ samples, you took the average of all of the averages, it would be equal
 to the population parameter.
 
 This is something called the \textbf{sampling distribution of the mean}.
+
+\hypertarget{central-limit-theorem}{%
+\section{Central Limit Theorem}\label{central-limit-theorem}}
 
 We will never have many many many samples of the same thing, right?
 Surveys are costly, and we are happy if we can run it once. So instead
@@ -5145,9 +5152,18 @@ study later is clear about what should be included in your study, and
 what should be excluded. You can imagine that this is a very important
 step, since what is included/ excluded.
 
-So imagine you are about to embark on a study of \emph{hate speech}. You
-have some twitter data, which includes 100,000 tweets, and you want to
-be able to select which one of these tweets includes hate speech, and
+\hypertarget{activity-2-conceptualise-hate-speech.}{%
+\subsection{Activity 2: Conceptualise `hate
+speech'.}\label{activity-2-conceptualise-hate-speech.}}
+
+So imagine you are about to embark on a study of \emph{hate speech}.
+Remember in the first session we spoke about some examples of
+research,\href{https://www.washingtonpost.com/news/the-intersect/wp/2016/09/26/these-charts-show-exactly-how-racist-and-radical-the-alt-right-has-gotten-this-year/?noredirect=on\&utm_term=.aeb311ab060c}{and
+one was looking at radicalisation towards the alt right using twitter
+data}. Let's say we want to carry out a similar study.
+
+You have some twitter data, which includes 100,000 tweets, and you want
+to be able to select which one of these tweets includes hate speech, and
 which one does not. For you to be able to carry out this research, and
 be transparent about it as well, ensuring reproducibility of your work,
 you need to conceptualise hate speech in a clear, detailed, and specific
@@ -5177,33 +5193,58 @@ And finally this third one?
 
 \includegraphics{http://www.pressgazette.co.uk/wp-content/uploads/2017/05/hoops.jpg}
 
-All three tweets were considered hateful and as exhibiting hate speech
-by many people (see
+So would you categorise these tweets as hate speech according to your
+criteria that you wrote out above? Why or why not? In fact, the included
+tweets have all been considered hateful by various people (see
 \href{http://www.pressgazette.co.uk/katie-hopkins-leaving-lbc-radio-effective-immediately-station-announces/}{here
 for the first and last one}, and
 \href{http://www.bbc.co.uk/news/uk-scotland-glasgow-west-30641705}{here
-about the second one}). By reading them, with our human sentiment, we
-can appreciate that all three tweets are hateful. But how did they do
-against the way that you conceptualised hate speech? Would they all be
-included in your study? Did you include everything according to your
-criteria that you would have liked to include, based on your human
-understanding of what hate speech means?
+about the second one}). But when you are studying a concept as comlex as
+hate speech, it's important that you can justify why or why not you
+include something as hate speech.
 
-If you did, that is very impressive. If you did not, don't despair, I
-started you off with a tough one. Hate crime in general is very complex,
-and therefore tough to conceptualise and define. There is no
-criminological consensus on the definition or even the validity of the
-concept of hate crime. There is legislation in this country to account
-for hate crime, and generally they reflect the core belief that hate
-crime policy should support a basic human right to be free from crime
-fuelled by hostility because of an individual's personal
-characteristics, but even in legislation this is quite hard to pin down.
+Reading these tweets, using our human sentiment, we can appreciate that
+the tweets are hateful. But how did they do against the way that you
+conceptualised hate speech? Would they all be included in your study?
+Did you include everything according to your criteria that you would
+have liked to include, based on your human understanding of what hate
+speech means?
 
-But conceptualising what you mean (and therefore also what you don't
-mean) by hate crime a is very important step in your research, as it can
-influence what data you collect, and therefore the outcomes of your
-study, and the findings you'll be able to report. For the purposes of a
-research study, it can influence who your results are relevant for.
+If you did, that is very impressive. If you did not, don't despair, hate
+speach is a very complex concept, and therefore tough to conceptualise
+and define. There is no criminological consensus on the definition or
+even the validity of the concept of hate crime. There is legislation in
+this country to account for hate crime, and generally they reflect the
+core belief that hate crime policy should support a basic human right to
+be free from crime fuelled by hostility because of an individual's
+personal characteristics, but even in legislation this is quite hard to
+pin down.
+
+One study looking at hate speech is
+\href{https://epjdatascience.springeropen.com/articles/10.1140/epjds/s13688-016-0072-6}{Burnap,
+P., \& Williams, M. L. (2016). Us and them: identifying cyber hate on
+Twitter across multiple protected characteristics. EPJ Data Science,
+5(1), 1. Chicago}. They defined hate speech to include as the following:
+
+\begin{quote}
+``Text that is offensive or antagonistic in terms of race
+ethnicity/sexual orientation/disability''
+\end{quote}
+
+So by these definitions they may include the above tweets. However, in
+their conceptualisation of hate crime, they are explicit about not only
+what is included, but what may be excluded from their concept: They
+specifically not:
+
+\begin{quote}
+``Transgender cyber hate was not considered as part of the study. ``
+\end{quote}
+
+As you can see, conceptualising what you mean (and therefore also what
+you don't mean) by hate crime a is very important step in your research,
+as it can influence what data you collect, and therefore the outcomes of
+your study, and the findings you'll be able to report. For the purposes
+of a research study, it can influence who your results are relevant for.
 Remember when we spoke about generalisability and validity in the first
 week's feedback session? I'll return to these later, but it's important
 to consider that the way that you conceptualise your concepts will
@@ -5215,6 +5256,10 @@ important step, that affects the measurement we will discuss in the next
 section, but that affects all the next steps in your study. How you
 decide what to measure has implications for what sorts of conclusions
 you can draw from your data after analysis.
+
+\hypertarget{the-importance-of-conceptualisation}{%
+\section{The importance of
+conceptualisation}\label{the-importance-of-conceptualisation}}
 
 You will have seen this in your preparatory reading, in Chapter 5
 (``Research Design'') of the book `The Practice of Social Research' by
@@ -5653,6 +5698,10 @@ somewhere here:
 
 \includegraphics{imgs/your_height_here.png}
 
+\hypertarget{activity-3-computing-a-z-score-in-excel}{%
+\subsection{Activity 3: Computing a z-score in
+Excel}\label{activity-3-computing-a-z-score-in-excel}}
+
 To compute the z-score for each person in excel, you simply have to turn
 the formula above into excel formula language. We know that all our
 variables are in the ``height'' column, which is column ``B''. So we
@@ -5683,6 +5732,10 @@ combine all the z-scores into a composite variable, that would be able
 to tell us about that person's ``tallness'' is that was a variable we
 conceptualised as made up of these factors, and operationalised with
 this composite measure.
+
+\hypertarget{activity-4-twitter-data-revisited}{%
+\subsection{Activity 4: Twitter data
+revisited}\label{activity-4-twitter-data-revisited}}
 
 Let's demonstrate with some actual data, that is relevant to
 criminology. Let's suppose that we are interested in the popularity of
@@ -5776,6 +5829,10 @@ In fact most of the things we study in the social sciences, and in
 criminology, are very complex social processes and often best
 represented by constructs, which can be measured this way through
 composite variables.
+
+\hypertarget{composite-variables-created-from-categorical-variables}{%
+\section{Composite variables created from categorical
+variables}\label{composite-variables-created-from-categorical-variables}}
 
 Another thing to mention regarding measurement in social sciences, and
 criminology, is that often times our data come from surveys. And in
@@ -6117,9 +6174,9 @@ in this lab we will address this through something called Cronbach's
 alpha. But first, let's calculate a summative score for ``feelings of
 unsafety''.
 
-\hypertarget{activity-1-calculating-a-summative-score}{%
-\subsection{Activity 1: Calculating a summative
-score}\label{activity-1-calculating-a-summative-score}}
+\hypertarget{activity-5-calculating-a-summative-score}{%
+\subsection{Activity 5: Calculating a summative
+score}\label{activity-5-calculating-a-summative-score}}
 
 So back to our data about collecting people's feelings of unsafety, in
 their neighbourhoods. We have our three indicator questions:
@@ -6280,9 +6337,9 @@ in order to be able to speak about the our measure confidently. And as
 mentioned earlier, you can put a number to the extent to which you can
 rely on your measures, using Cronbach alpha.
 
-\hypertarget{activity-2-testing-your-questions-cronbachs-alpha}{%
-\subsection{Activity 2: Testing your questions: Cronbach's
-alpha}\label{activity-2-testing-your-questions-cronbachs-alpha}}
+\hypertarget{activity-6-testing-your-questions-cronbachs-alpha}{%
+\subsection{Activity 6: Testing your questions: Cronbach's
+alpha}\label{activity-6-testing-your-questions-cronbachs-alpha}}
 
 Cronbach's alpha is a measure of internal consistency, that is, how
 closely related a set of items are as a group. It is considered to be a
@@ -6481,9 +6538,9 @@ variables. This means that you can change a numeric variable into
 categorical, but you can't change categorical into numeric. Just
 remember this!
 
-\hypertarget{activity-3-recoding-variables}{%
-\subsection{Activity 3: Recoding
-Variables}\label{activity-3-recoding-variables}}
+\hypertarget{activity-7-recoding-variables}{%
+\subsection{Activity 7: Recoding
+Variables}\label{activity-7-recoding-variables}}
 
  OK so final thing, to turn a numeric variable into a categorical, go
 back to your data of people's heights. Let's say we don't want any
