--- a/book/bookdown-demo-master/bookdown-demo-master/docs/bookdown-demo.tex
+++ b/book/bookdown-demo-master/bookdown-demo-master/docs/bookdown-demo.tex
@@ -8009,10 +8009,8 @@ condition. I'll be in touch in 12 months time to follow up, and find out
 about your offending behaviour. I'll report the results back in a paper.
 Science\ldots{}!
 
-\includegraphics{https://media.giphy.com/media/l41lI4bYmcsPJX9Go/giphy.gif}
-
 \hypertarget{activity-3-stratified-randomisation}{%
-\section{Activity 3: Stratified
+\subsection{Activity 3: Stratified
 randomisation}\label{activity-3-stratified-randomisation}}
 
 Randomization is important because it is almost the only way to assign
@@ -8185,7 +8183,9 @@ groups will also change! So since we don't want this, we want to somehow
 
 You can do this by highlighting the column and going to Formulas
 \textgreater{} Settings \textgreater{} and selecting ``Calculate
-Manually''.
+Manually'':
+
+\includegraphics{imgs/calc_man_pc.png}
 
 On mac:
 
